fixed minor button alignment issues

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -89,7 +89,7 @@ label {
   font-weight: bold;
 	height: 100%;
 	/*width: 100%;*/
-	padding: 10px 0px 00px 0px;
+	padding: 10px 0px 0px 0px;
 	opacity: .5;
 	transition: all .5s ease-in-out;
 	/*&:hover, &:focus, &:active {
